Update ssh host

--- a/dotfiles/ssh/config
+++ b/dotfiles/ssh/config
@@ -10,8 +10,28 @@ Host ccv
   HostName ssh.ccv.brown.edu
   User ll61
 
-Host taishi
-  HostName apma-gpu-07
+Host hippocampus
+  User lu
+
+Host gpu07
+  User ll61
+
+Host gpu04
+  User ll61
+
+Host apma-gpu-03
+  User ll61
+
+Host apma-gpu-05
+  User ll61
+
+Host wuzhui
+  User ll61
+
+Host chitu
+  User ll61
+
+Host jueying
   User ll61
 
 Host *
