--- a/dotfiles/ssh/config
+++ b/dotfiles/ssh/config
@@ -2,6 +2,10 @@ Host chitu
   HostName chitu.seas.upenn.edu
   User lu
 
+Host dilu
+  HostName dilu.seas.upenn.edu
+  User lu
+
 Host dam
   HostName login.dam.brown.edu
   User ll61
