--- a/dotfiles/ssh/config
+++ b/dotfiles/ssh/config
@@ -6,17 +6,9 @@ Host dilu
   HostName dilu.seas.upenn.edu
   User lu
 
-Host dam
-  HostName login.dam.brown.edu
-  User ll61
-
-Host ccv
-  HostName ssh.ccv.brown.edu
-  User ll61
-
-Host dgx
-  HostName apma-nv-02.dam.brown.edu
-  User ll61
+Host jueying
+  HostName jueying.seas.upenn.edu
+  User lu
 
 Host *
   ServerAliveInterval 60
