--- a/dotfiles/ssh/config
+++ b/dotfiles/ssh/config
@@ -14,5 +14,9 @@ Host wuzhui
   HostName wuzhui.seas.upenn.edu
   User lu
 
+Host grace
+  HostName grace.hpc.yale.edu
+  User ll2247
+
 Host *
   ServerAliveInterval 60
